traefik/03-post-install/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http
  namespace: kube-system
spec:
  entryPoints:
  - traefik
  routes:
  - kind: Rule
    match: Host(`dev.brainest.ml`)
    middlewares:
    - name: https-redirect
    services:
    - name: traefik
      port: 443
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
  namespace: kube-system
spec:
  entryPoints:
  - traefik
  routes:
  - kind: Rule
    match: Host(`dev.brainest.ml`)
    services:
    - name: traefik
      port: 8080
  tls:
    certResolver: default
